--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 jar {
     manifest {
-        attributes  "Main-Class": "jp.ac.uryukyu.ie.e175746"
+        attributes  "Main-Class": "jp.ac.uryukyu.ie.e175746.Main"
         attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
     }
 }
